--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -23,7 +23,7 @@
         {% if site.description or site.github.project_tagline %}
           <p>{{ site.description | default: site.github.project_tagline }}</p>
         {% endif %}
-        <p class="view"><img src="https://avatars.githubusercontent.com/u/21975779?s=400&u=60da64900bd65d1875d7be142599cc03391c0843&v=4" width=15%><a href="{{ site.github.repository_url }}">View the Project on GitHub <small>{{ github_name }}</small></a></p>
+        <p class="view"><a href="{{ site.github.repository_url }}"><img src="https://avatars.githubusercontent.com/u/21975779?s=400&u=60da64900bd65d1875d7be142599cc03391c0843&v=4" width=5%>View the Project on GitHub <small>{{ github_name }}</small></a></p>
         <ul>
         {% if site.show_downloads %}
           <li><a href="{{ site.github.zip_url }}">Download <strong>ZIP File</strong></a></li>
