--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -19,11 +19,10 @@
   <body>
     <div class="wrapper">
       <header {% unless site.description or site.github.project_tagline %} class="without-description" {% endunless %}>
-        <h1>{{ site.title | default: site.github.repository_name }}</h1>
+        <h1>{{ site.title | default: site.github.repository_name }}<img src="https://avatars.githubusercontent.com/u/21975779?s=400&u=60da64900bd65d1875d7be142599cc03391c0843&v=4" width=5%></h1>
         {% if site.description or site.github.project_tagline %}
           <p>{{ site.description | default: site.github.project_tagline }}</p>
         {% endif %}
-        <p class="view">ABC<img src="https://avatars.githubusercontent.com/u/21975779?s=400&u=60da64900bd65d1875d7be142599cc03391c0843&v=4" width=5%></p>
         <p class="view"><a href="{{ site.github.repository_url }}">View the Project on GitHub <small>{{ github_name }}</small></a></p>
         <ul>
         {% if site.show_downloads %}
