--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -19,7 +19,7 @@
   <body>
     <div class="wrapper">
       <header {% unless site.description or site.github.project_tagline %} class="without-description" {% endunless %}>
-        <h1><img align="center" src="{{ site.avatar }}" width=15%>{{ site.title | default: site.github.repository_name }}</h1>
+        <h1><img align="center" src="{{ site.avatar }}" width=15%>{{ site.title | default: site.github.repository_name }} {{ site.github.is_project_page }} {{ site.github.is_user_page }}</h1>
         {% if site.description or site.github.project_tagline %}
           <p>{{ site.description | default: site.github.project_tagline }}</p>
         {% endif %}
