--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -19,25 +19,26 @@
   <body>
     <div class="wrapper">
       <header {% unless site.description or site.github.project_tagline %} class="without-description" {% endunless %}>
-        <h1><img align="center" src="{{ site.avatar }}" width=15%>{{ site.title | default: site.github.repository_name }} {{ site.github.is_project_page }} {{ site.github.is_user_page }}</h1>
+        <h1><img align="center" src="{{ site.avatar }}" width=15%>{{ site.title | default: site.github.repository_name }}</h1>
+
         {% if site.description or site.github.project_tagline %}
           <p>{{ site.description | default: site.github.project_tagline }}</p>
         {% endif %}
 
-        {% if site.github.is_project_page %}
-        <p class="view"><a href="{{ site.github.repository_url }}">View the Project on GitHub <small>{{ site.github.repository_nwo }}</small></a></p>
-        {% endif %}
-
-        {% if site.github.is_user_page %}
-        <p class="view"><a href="{{ site.github.owner_url }}">View My GitHub Profile</a></p>
-        {% endif %}
-        
         <ul>
         {% if site.show_downloads %}
           <li><a href="{{ site.github.zip_url }}">Download <strong>ZIP File</strong></a></li>
           <li><a href="{{ site.github.tar_url }}">Download <strong>TAR Ball</strong></a></li>
         {% endif %}
+
+        {% if site.github.is_project_page %}
           <li><a href="{{ site.github.repository_url }}">View On <strong>GitHub</strong></a></li>
+          <li><a href="{{ site.github.repository_url }}">View the Project on GitHub <small>{{ site.github.repository_nwo }}</small></a></li>
+        {% endif %}
+
+        {% if site.github.is_user_page %}
+          <li><a href="{{ site.github.owner_url }}">View My GitHub Profile</a></li>
+        {% endif %}
         </ul>
       </header>
       <section>
