--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -37,7 +37,7 @@
         {% endif %}
 
         {% if site.github.is_user_page %}
-          <li><a href="{{ site.github.owner_url }}">View My GitHub Profile</a></li>
+          <li><a href="{{ site.github.owner_url }}">View GitHub Profile</a></li>
         {% endif %}
         </ul>
       </header>
