--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -22,7 +22,7 @@
   <body>
     <div class="wrapper">
       <header {% unless site.description or site.github.project_tagline %} class="without-description" {% endunless %}>
-        <h1>a href="{{ site.github.url }}"><img align="center" src="{{ site.avatar }}" width=15%>{{ site.title | default: site.github.repository_name }}</a></h1>
+        <h1><a href="{{ site.github.url }}"><img align="center" src="{{ site.avatar }}" width=15%>{{ site.title | default: site.github.repository_name }}</a></h1>
 
         {% if site.description or site.github.project_tagline %}
           <p>{{ site.description | default: site.github.project_tagline }}</p>
